# m32duino

./: .gitignore  README.md  package_m32_index.json  package_m32_index.template.json
.github/workflows/: release.yml
examples/00_HelloUSB/: 00_HelloUSB.ino
examples/01_USBSerial/: 01_USBSerial.ino
examples/10_ButtonsMapped/: 10_ButtonsMapped.ino
examples/11_Encoders/: 11_Encoders.ino
examples/12_Joycoder/: 12_Joycoder.ino
examples/13_ScanMatrix/: 13_ScanMatrix.ino
examples/14_ScanMatrixDiscover/: 14_ScanMatrixDiscover.ino
examples/15_LEDDriverTest/: 15_LEDDriverTest.ino
examples/16_LEDDriverDiscover/: 16_LEDDriverDiscover.ino
examples/17_OLED/: 17_OLED.ino
examples/18_TouchStrips/: 18_TouchStrips.ino
examples/19_TouchEncoder/: 19_TouchEncoder.ino
examples/20_PedalJack/: 20_PedalJack.ino
examples/21_ArduinoPortBaseline/: 21_ArduinoPortBaseline.ino
examples/99_SynthDemo/: 99_SynthDemo.ino  README.md  audio.cpp  audio.h  encoder.cpp  encoder.h  events.cpp  events.h  led.cpp  led.h  mappings.cpp  mappings.h  oled.cpp  oled.h  scan.cpp  scan.h  synth_state.cpp  synth_state.h  sys_clock.cpp  sys_clock.h  touch.cpp  touch.h
platform/: boards.txt  programmers.txt
platform/variants/NI_M32/: ldscript.ld  m32_pinmap.h  variant_NI_M32.cpp  variant_NI_M32.h
release/: package_m32_index.json
scripts/: m32_dev.py
templates/: platform.patch
tools/m32_flasher/: Cargo.toml
tools/m32_flasher/src/: main.rs
