[package]
name = "m32_flash"
version = "0.0.1"
edition = "2021"
description = "Arduino IDE uploader for Native Instruments Komplete Kontrol M32"
license = "MIT"

[[bin]]
name = "m32_flash"
path = "src/main.rs"

[dependencies]
# `vendored` builds and statically links libusb-1.0 from source, so the binary
# has no system libusb dependency on Linux/Windows CI runners.
rusb = { version = "0.9", features = ["vendored"] }
dfu-libusb = "0.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
